Prevent nodes from flying far off screen, add countrys images

--- a/style.css
+++ b/style.css
@@ -2,26 +2,16 @@ body, html {
   height: 100%;
 }
 body {
-  box-sizing: border-box;
-  padding: 20px;
   margin: 0;
-  font-family: Georgia, 'Times New Roman', Times, serif;  
-}
-
-.svg-container {
-  height: 100%;
-  padding: 20px;
-  min-height: 400px;
-  max-height: 600px;
-  margin-bottom: 20px;
-  text-align: center;
-  border-radius: 20px;
-  box-shadow: 0 0 5px;
+  overflow: hidden;
+  display: flex;
   box-sizing: border-box;
+  font-family: Georgia, 'Times New Roman', Times, serif;  
 }
 
 .chart {
   height: 100%;
+  margin: 0 auto;
 }
 
 .links line {
